# django-utils

./: .gitignore  README.md  _manage.py  _settings.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: integrate.yml  publish.yml
django_utils/: README.md
django_utils/featureflag/: __init__.py  admin.py  apps.py  models.py
django_utils/featureflag/migrations/: 0001_initial.py  0002_auto_2020042.py  0003_dummymodel_alter_clientflag_everyone_and_more.py
django_utils/helper/: requests.py
django_utils/logger/: middleware.py  mixins.py  requests.py
django_utils/logger/utils/: logger.py  logging_formatter.py
django_utils/misc/: middleware.py  mixins.py
