[tool.poetry]
name = "django-utils"
version = "0.0.0"
description = ""
authors = ["Thomas Weatherston <thomas.weatherston@atheon.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.15"
requests = "^2"
python-json-logger = "^2"
django-model-utils = "^4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true